--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -5,7 +5,7 @@
 #}
 <div class="row" id="page-wrapper"><div id="page">
 
-  <header id="header" role="banner" aria-label="{{ 'Site header'|t}}"><div class="section clearfix">
+  <header id="header" role="banner" aria-label="{{ 'Site header'|t}}"><div class="columns section clearfix">
 
     {% if site_name or site_slogan %}
       <div id="name-and-slogan"{% if hide_site_name and hide_site_slogan %} class="visually-hidden"{% endif %}>
