--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -29,9 +29,10 @@
 <!DOCTYPE html>
 <html{{ html_attributes }}>
   <head>
-    {{ head }}
-    <title>{{ head_title }}</title>
-    {{ styles }}
+    <head-placeholder token="{{ placeholder_token|raw }}">
+    <title>{{ head_title|safe_join(' | ') }}</title>
+    <css-placeholder token="{{ placeholder_token|raw }}">
+    <js-placeholder token="{{ placeholder_token|raw }}">
   </head>
   <body{{ attributes }}>
     <a href="#main-content" class="visually-hidden focusable skip-link">
@@ -40,7 +41,6 @@
     {{ page_top }}
     {{ page }}
     {{ page_bottom }}
-    {{ scripts }}
-    {{ scripts_bottom }}
+    <js-bottom-placeholder token="{{ placeholder_token|raw }}">
   </body>
 </html>
